Organized directories, added contact and project page.

--- a/about.html
+++ b/about.html
@@ -4,15 +4,15 @@
 	<meta charset="UTF-8">
 	<title>Yu Asabe</title>
 
-	<link rel="stylesheet" href="bootstrap.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
 	<!-- <link rel="stylesheet" href="main.css"> -->
-	<link rel="stylesheet" href="main2.css">
+	<link rel="stylesheet" href="css/main2.css">
 </head>
 <body>
 	<div class="container">
 
 		<div class="left-box">
-			<h1 class="name">Yu Asabe</h1>
+			<h1 class="name"><a href="index.html">Yu Asabe</a></h1>
 
 			
 
@@ -40,9 +40,9 @@
 	</div>
 	
 
-	<script src="jquery-1.11.1.js"></script>
-	<script src="jquery-ui.js"></script>
-	<script src="bootstrap.js"></script>
-	<script src="about.js"></script>
+	<script src="js/jquery-1.11.1.js"></script>
+	<script src="js/jquery-ui.js"></script>
+	<script src="js/bootstrap.js"></script>
+	<script src="js/about.js"></script>
 </body>
 </html>
