--- a/contact.html
+++ b/contact.html
@@ -5,23 +5,32 @@
 	<title>Yu Asabe</title>
 
 	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/main.css">
+	<!-- <link rel="stylesheet" href="main.css"> -->
+	<link rel="stylesheet" href="css/contact.css">
 </head>
 <body>
 	<div class="container">
 
 		<div class="left-box">
-			<h1 class="name">Yu Asabe</h1>
+			<h1 class="name"><a href="index.html">Yu Asabe</a></h1>
+
+			
+
 		</div>
 		
 		<div class="right-box">
 			<h1 class="initial">YA</h1>
 
-			<h1 class="welcome">_Welcome...</h1>
+			
 
 			<h2 class="nav"><a href="about.html">ABOUT_ME</a></h2>
 			<h2 class="nav"><a href="projects.html">PROJECT_S</a></h2>
-			<h2 class="nav"><a href="contact.html">CON_TACT</a></h2>
+			<h2 class="nav selected">CON_TACT</h2>
+			
+			<p class="contact">
+				yuasabe@nextriya.com<br>
+				<a href="https://www.twitter.com/YAsmartgrid">@YAsmartgrid</a><br>
+			</p>
 
 		</div>
 		
@@ -31,6 +40,6 @@
 	<script src="js/jquery-1.11.1.js"></script>
 	<script src="js/jquery-ui.js"></script>
 	<script src="js/bootstrap.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/projects.js"></script>
 </body>
 </html>
