some touches, and fixes.

--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,7 @@
 			<p class="contact">
 				yuasabe@nextriya.com<br>
 				<a href="https://www.twitter.com/YAsmartgrid">@YAsmartgrid</a><br>
+				<a href="http://www.nextriya.com">NEXTRIYA Inc.</a>
 			</p>
 
 		</div>
