--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 	<div class="container">
 
 		<div class="left-box">
-			<h1 class="name">Yu Asabe</h1>
+			<h1 class="name">Yu Asabe</h1><br>
+
+			<h3 class="moto">CHANGING THE WORLD.<br>
+			ONE STEP AT A TIME.</h3>
 		</div>
 		
 		<div class="right-box">
